--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        font-family: sans-serif;
     }
 </style>
 
 <body>
-    <h4 class="warn">pindid.com | pin you best price</h4>
+    <h2 class="warn">pindid.com | pin you best price</h42
 </body>
 
 </html>
