--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </style>
 
 <body>
-    <h2 class="warn">pindid.com | pin you best price</h42
+    <h2 class="warn">pindid.com | pin your best price</h42
 </body>
 
 </html>
