--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     border: 1px solid gray;
     border-radius: 3px;
     width: 273px;
-    height: 279px;}
+    height: 279px;
+    text-align: center;
+    margin: 5px;}
 </style>
 
 <body>
