--- a/index.html
+++ b/index.html
@@ -6,61 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>pindid.com | pind your best price</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
-<style>
-    body {
-        background: #fff;
-        color: wheat;
-    }
-
-    .warn {
-        font-family: sans-serif;
-		color: blue;
-		text-align: center;
-    }
-	
-	.prd{
-	float: left;
-    padding: 10px;
-    border: 1px solid gray;
-    border-radius: 3px;
-    width: 273px;
-    height: 279px;
-    text-align: center;
-    margin: 5px;}
-</style>
 
 <body>
-    <h2 class="warn">pindid.com | pin your best price</h4>
-	<div class="prd">
-		<a target="_blank"  href="https://www.amazon.in/gp/product/B07HCXQZ4P/ref=as_li_tl?ie=UTF8&camp=3638&creative=24630&creativeASIN=B07HCXQZ4P&linkCode=as2&tag=empoweringcon-21&linkId=e5d52c0c3219d697ea061447646ad134"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=IN&ASIN=B07HCXQZ4P&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=empoweringcon-21" ></a><img src="//ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&l=am2&o=31&a=B07HCXQZ4P" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a target="_blank"  href="https://www.amazon.in/gp/product/B07HGJJ58K/ref=as_li_tl?ie=UTF8&camp=3638&creative=24630&creativeASIN=B07HGJJ58K&linkCode=as2&tag=empoweringcon-21&linkId=2362687f0b4f7be8fdf75ec81fbed85c"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=IN&ASIN=B07HGJJ58K&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=empoweringcon-21" ></a><img src="//ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&l=am2&o=31&a=B07HGJJ58K" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a target="_blank"  href="https://www.amazon.in/gp/product/B07DJL15QT/ref=as_li_tl?ie=UTF8&camp=3638&creative=24630&creativeASIN=B07DJL15QT&linkCode=as2&tag=empoweringcon-21&linkId=cb00938cb92f5dd005b4802d08310a3d"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&MarketPlace=IN&ASIN=B07DJL15QT&ServiceVersion=20070822&ID=AsinImage&WS=1&Format=_SL250_&tag=empoweringcon-21" ></a><img src="//ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&l=am2&o=31&a=B07DJL15QT" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a href="https://www.amazon.in/Apple-MacBook-15-inch-Retina-2-2GHz/dp/B07FMTF9XY/ref=as_li_ss_il?pd_rd_w=GHT7S&pf_rd_p=aafabaa1-ee39-430f-9be9-f6290ce4e5ac&pf_rd_r=CHA9V33F0F5R9T2NZ759&pd_rd_r=8aa737ac-333e-4813-b879-50039676fbae&pd_rd_wg=QEwxJ&ref_=pd_gw_wsim&linkCode=li2&tag=empoweringcon-21&linkId=e50b8d89c8d0e7bba4d85400858a7f2a&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07FMTF9XY&Format=_SL160_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li2&o=31&a=B07FMTF9XY" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a href="https://www.amazon.in/Test-Exclusive-734/dp/B07DJCVTBH/ref=as_li_ss_il?keywords=oneplus&qid=1556071867&s=electronics&sr=1-4&linkCode=li3&tag=empoweringcon-21&linkId=2e8be6cc65ef04871497f8f42640cf04&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07DJCVTBH&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07DJCVTBH" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a href="https://www.amazon.in/Cover-Oneplus-6T-One-Back/dp/B07JFX1SZK/ref=as_li_ss_il?_encoding=UTF8&pd_rd_i=B07JFX1SZK&pd_rd_r=3d40e17e-6636-11e9-8944-a73b054021f7&pd_rd_w=aXTm7&pd_rd_wg=yZBZA&pf_rd_p=e9333571-3419-4618-a6e0-861f270e8b65&pf_rd_r=PXJ91ZHX09VF7C9Q0SS6&psc=1&refRID=PXJ91ZHX09VF7C9Q0SS6&linkCode=li3&tag=empoweringcon-21&linkId=d29fc1901b6a888bb7d5324e9998e938&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07JFX1SZK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07JFX1SZK" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a href="https://www.amazon.in/Pirum-Flip-Cover-Plus-Oneplus/dp/B07K3TMKX1/ref=as_li_ss_il?_encoding=UTF8&pd_rd_i=B07K3TMKX1&pd_rd_r=65b57a81-6636-11e9-b2c0-9760af0625ea&pd_rd_w=fboZs&pd_rd_wg=8VFXV&pf_rd_p=87667aae-831c-4952-ab47-0ae2a4d747da&pf_rd_r=7R33SEBZNMM9SEB59G4P&psc=1&refRID=7R33SEBZNMM9SEB59G4P&linkCode=li3&tag=empoweringcon-21&linkId=5352ad869055ba916a65a59ce5c5aa93&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07K3TMKX1&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07K3TMKX1" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div class="prd">
-		<a href="https://www.amazon.in/Sony-inches-Bravia-Android-KD-65X9000F/dp/B07B61V3Q6/ref=as_li_ss_il?crid=193OLXZFCAN68&keywords=uhd+tv&qid=1556072012&s=electronics&sprefix=uhd+t,electronics,375&sr=1-1-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=9ddac68eecc8ad04931fb8c62e551c04&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07B61V3Q6&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07B61V3Q6" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
-	</div>
-	<div style="float:left;padding:10px;"></div>
-	<div style="float:left;padding:10px;"></div>
-	<div style="float:left;padding:10px;"></div>
-	<div style="float:left;padding:10px;"></div>
-	<div style="float:left;padding:10px;"></div>
+    <header>
+        <nav class="logo">
+            <div class="float-left">
+                <span>pindid</span>
+            </div>
+            <ul class="float-right">
+                <li class="left-nav-item">
+                    <a href="">About</a>
+                </li>
+                <li class="left-nav-item">
+                    <a href="">Login</a>
+                </li>
+            </ul>
+        </nav>
+
+        <ul class="nav jav-pills nav-justified">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Mobiles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Electronics</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Fashion</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Auto</a>
+            </li>
+        </ul>
+
+        <!-- search will be used later-->
+        <ul class="nav justify-content-center" style="display: none;">
+            <li class="nav-item">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" placeholder="Whar are you looking for"
+                        aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </header>
+    <main>
+        <div class="bd-example jumbotron">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://www.android.com/static/2016/img/hero-carousel/photo-phone.png" class="d-block w-50" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://www.android.com/static/2016/img/home/holiday-hero/motorola-home-en-in_m.png" class="d-block w-50" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://www.android.com/static/2016/img/home/holiday-hero/motorola-home-en-in_m.png" class="d-block w-50" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
