--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
 
-        <ul class="nav jav-pills nav-justified">
+        <ul class="nav jav-pills nav-justified item-nav-head">
             <li class="nav-item">
                 <a class="nav-link" href="#">Mobiles</a>
             </li>
