--- a/index.html
+++ b/index.html
@@ -111,10 +111,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
+                            <a href="https://www.amazon.in/Erisha-Womens-Printed-Palazzo-Set_Yellow/dp/B07Q5MJRPJ/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-1-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=1cd1d3ec7497b085251c1ae9ae91a0ec&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07Q5MJRPJ&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07Q5MJRPJ" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content.</p>
