--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card" >
-                            <a href="https://www.amazon.in/Harshana-Kurta-palazzo-set-women/dp/B07NDTWHPK/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-4-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=5c6161f904d9b8c9b5a9744721689027&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NDTWHPK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07NDTWHPK" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                            <a style="text-align:center;" href="https://www.amazon.in/Harshana-Kurta-palazzo-set-women/dp/B07NDTWHPK/ref=as_li_ss_il?crid=29ELSGT8JKD6W&keywords=kurta+with+palazzo+set+for+women&qid=1556271611&s=gateway&sprefix=kurta,aps,267&sr=8-4-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=5c6161f904d9b8c9b5a9744721689027&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07NDTWHPK&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07NDTWHPK" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
                             <p class="card-text">
                                 <a href="https://amzn.to/2XJnThB">Harshana Kurta with palazzo set for women</a>
@@ -149,88 +149,40 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
+                            <a style="text-align:center;" href="https://www.amazon.in/OnePlus-Mirror-Black-128GB-Storage/dp/B07DJHV6VZ/ref=as_li_ss_il?keywords=mobiles&qid=1556272658&s=gateway&sr=8-2-spons&psc=1&linkCode=li3&tag=empoweringcon-21&linkId=c3a2c042fdd0657fbfb31bdc38c8231f&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07DJHV6VZ&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07DJHV6VZ" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text">
+                                <a href="https://amzn.to/2L4gpnW">OnePlus 6T (Mirror Black, 8GB RAM, 128GB Storage)</a>
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
+                            <a style="text-align:center;" href="https://www.amazon.in/Apple-iPhone-XR-64GB-Black/dp/B07JWV47JW/ref=as_li_ss_il?keywords=mobiles&qid=1556272771&refinements=p_n_operating_system_browse-bin:1485080031&rnid=1485076031&s=electronics&sr=1-3&linkCode=li3&tag=empoweringcon-21&linkId=f5c5da96472525320f1503efa267b097&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B07JWV47JW&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B07JWV47JW" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text"><a href="https://amzn.to/2PE7JDz">Apple iPhone XR (64GB) - Black</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
+                            <a style="text-align:center;" href="https://www.amazon.in/Apple-iPhone-Silver-64GB-Storage/dp/B0711T2L8K/ref=as_li_ss_il?keywords=mobiles&qid=1556272771&refinements=p_n_operating_system_browse-bin:1485080031&rnid=1485076031&s=electronics&sr=1-7&linkCode=li3&tag=empoweringcon-21&linkId=9dbe3dbc0d156ded7a774678ea7f20a8&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0711T2L8K&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B0711T2L8K" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+                            <div class="card-body">
+                                    <p class="card-text"><a href="https://amzn.to/2XPGQ2l">Apple iPhone X (64GB) - Silver</a></p>
+                                </div>
                     </div>
                 </div>
+        
                 <div class="col-md-3">
                     <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
+                            <a style="text-align:center;" href="https://www.amazon.in/Nokia-105-Black/dp/B0745BNFYV/ref=as_li_ss_il?keywords=mobiles&qid=1556272789&rnid=1485076031&s=electronics&sr=1-26&linkCode=li3&tag=empoweringcon-21&linkId=df6adfe587b8fb33eea4420ed92b5db5&language=en_IN" target="_blank"><img border="0" src="//ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=B0745BNFYV&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=empoweringcon-21&language=en_IN" ></a><img src="https://ir-in.amazon-adsystem.com/e/ir?t=empoweringcon-21&language=en_IN&l=li3&o=31&a=B0745BNFYV" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <p class="card-text"><a href="https://amzn.to/2DzFnFI">Nokia 105 (Black)</a></p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card" >
-                        <img class="card-img-top" data-src="holder.js/100px180/?text=Image cap"
-                            alt="Image cap [100%x180]"
-                            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22286%22%20height%3D%22180%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20286%20180%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a58e2409f%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a58e2409f%22%3E%3Crect%20width%3D%22286%22%20height%3D%22180%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.125%22%20y%3D%2296.3%22%3EImage%20cap%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                            data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
-                        <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
+                
 
 
             </div>
