--- a/index.html
+++ b/index.html
@@ -112,31 +112,31 @@
         </div>
         <div class="container">
             <div>
-                <table class="maintable">
+                <table class="maintable table-borderless">
                     <tbody>
                         <tr>
                             <td>
-                                <a href="">
+                                <a href="" title="Mobiles">
                                     <i class="fa fa-mobile" aria-hidden="true"></i>
-                                    <h3>Mobiles</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Mobiles</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fa fa-car" aria-hidden="true"></i>
-                                    <h3>Auto</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Auto</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fab fa-apple" aria-hidden="true"></i>
-                                    <h3>Apple</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Apple</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fab fa-google" aria-hidden="true"></i>
-                                    <h3>Google</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Google</h3>
                                 </a>
                             </td>
                         </tr>
@@ -144,25 +144,25 @@
                             <td>
                                 <a href="">
                                     <i class="fas fa-tshirt"></i>
-                                    <h3>Tshirt</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Tshirt</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fas fa-swimmer"></i>
-                                    <h3>Swimming</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Swimming</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fas fa-female"></i>
-                                    <h3>Female Fashion</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Female Fashion</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fas fa-football-ball"></i>
-                                    <h3>Sport</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Sport</h3>
                                 </a>
                             </td>
                         </tr>
@@ -170,25 +170,25 @@
                             <td>
                                 <a href="">
                                     <i class="fas fa-tv"></i>
-                                    <h3>Home Applience</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Home Applience</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fas fa-spray-can"></i>
-                                    <h3>DO</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">DO</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fas fa-tablet"></i>
-                                    <h3>Ayur</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Ayur</h3>
                                 </a>
                             </td>
                             <td>
                                 <a href="">
                                     <i class="fas fa-umbrella"></i>
-                                    <h3>Its Raining</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none">Its Raining</h3>
                                 </a>
                             </td>
                         </tr>
