--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <td>
                                 <a href="">
                                     <i class="fas fa-tv"></i>
-                                    <h3 class="d-none d-lg-block d-xl-none d-xl-block">Home Applience</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none d-xl-block">Home Appliances</h3>
                                 </a>
                             </td>
                             <td>
@@ -181,7 +181,7 @@
                             </td>
                             <td>
                                 <a href="">
-                                    <i class="fas fa-tablet"></i>
+                                    <i class="fas fa-mortar-pestle"></i>
                                     <h3 class="d-none d-lg-block d-xl-none d-xl-block">Ayur</h3>
                                 </a>
                             </td>
