--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <td>
                                 <a href="">
                                     <i class="fas fa-spray-can"></i>
-                                    <h3 class="d-none d-lg-block d-xl-none d-xl-block">DO</h3>
+                                    <h3 class="d-none d-lg-block d-xl-none d-xl-block">Deodorant</h3>
                                 </a>
                             </td>
                             <td>
