--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <span>pindid</span>
             </div>
             <!-- search will be used later-->
-            <ul class="nav justify-content-center" style="display: none;">
+            <ul class="nav justify-content-center">
                 <li class="nav-item">
                     <div class="input-group mb-3">
-                        <input type="text" class="form-control" placeholder="Whar are you looking for"
+                        <input type="text" class="form-control" placeholder=""
                             aria-label="Recipient's username" aria-describedby="button-addon2">
                         <div class="input-group-append">
                             <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
