--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <input type="text" class="form-control" placeholder=""
                             aria-label="Recipient's username" aria-describedby="button-addon2">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                            <button class="btn btn-primary" type="button" id="button-addon2">Search</button>
                         </div>
                     </div>
                 </li>
